[project]
name = "pmc-llm-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.27.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.0",
    "litellm>=1.58.1",
    "smolagents>=1.4.1",
    "sqlmodel>=0.0.22",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]
